fix text overflow problem in gallery

--- a/staticfiles/css/gallery.scss
+++ b/staticfiles/css/gallery.scss
@@ -39,6 +39,7 @@ a * {
     margin-right: 1rem;
     pointer-events: none;
     width: calc(100% - 2rem);
+    height:7rem;
 }
 
 .sc-card #glyph-bg {
